# Tribe

./: CMakeLists.txt  Messages.sh  README  tribe.desktop  tribe.kdev4
.tx/: config
cmake/modules/: FindLibPwquality.cmake
data/: CMakeLists.txt  cities.kml  mirrorlist  netinstall.conf  postinstall.conf  timezones
scripts/: CMakeLists.txt  netinstall.sh.in  postinstall.sh  postinstall.sh~  postremove.sh
scripts/postinstall-functions/: 01-job-initialize-target  02-job-configure-users  03-job-configure-sudoers  04-job-configure-pacman  06-job-pre-install  08-job-download-l10n  11-job-setup-hardware  12-job-create-initrd  13-job-regenerate-locales  15-job-set-keymap  16-job-set-hostname  20-job-install-grub2  helpers  init  job-cleanup-drivers  job-cleanup-l10n  job-configure-users  job-configure-users~  job-create-initrd  job-create-localtime  job-initialize-target  job-initialize-target~  job-install-grub2  job-pre-install  job-rcconf-daemons  job-regenerate-locales  job-set-hostname  job-set-keymap  job-setup-hardware  job-setup-hardware~
src/: installationhandler.cpp  installationhandler.h  main.cpp  mainwindow.cpp  mainwindow.h
src/pages/: configpage.cpp  configpage.h  installationpage.cpp~  keyboardpage.cpp  licensepage.cpp  localepage.cpp  localepage.h  netinstpage.cpp  partitionpage.cpp  partitionpage.h  readyinstallpage.cpp  usercreationpage.cpp
src/widgets/: avatardialog.cpp  userwidget.cpp  userwidget.cpp~  userwidget.h
translations/: ar.po  ast.po  bg.po  ca.po  ca@valencia.po  cs.po  de.po  el.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  id.po  it.po  ja.po  kk.po  nb.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  tribe.pot  uk.po  uz.po  zh_CN.po  zh_TW.po
ui/: tribe.qss
ui/pages/: base.ui  config.ui  intro.ui  keyboard.ui  netinst.ui  partition.ui  readyinstall.ui  releasenotes.ui  usercreation.ui
ui/widgets/: userwidget.ui
